# luadebugger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_extension.sh  readme.md
internals/: CMakeLists.txt
luadbg/: .gitignore  CMakeLists.txt  debuggee.lua  debugger.lua  generate_inl.sh
luadbg/cmake/: luadbgConfig.cmake  luadbg_sharedConfig.cmake  luadbg_staticConfig.cmake
luadbg/include/: debugger.h  debugger.inl  luaproxy.h
luadbg/src/: debugger.cpp  debugger.h  debugger.inl  lua_bind.h  lua_cjson.c  lua_cjson.cpp  lua_net.cpp  lua_proxy.cpp  lua_proxy.h  luadbg.cpp  luadbg.inl  net_thread_queue.cpp  net_thread_queue.h  strbuf.cpp
test/: .gitignore  CMakeLists.txt  a.lua  main.lua
test/src/: lua_proxy.h  main.cpp
vscode/: .gitignore  CMakeLists.txt  README.md  luadbgadapter-0.5.3.vsix  main.lua  package.json  threads.lua
vscode/src/: any.h  debugger_adapter.cpp  debugger_adapter.h  lua_bind.h  lua_cjson.c  lua_net.h
